--- a/public/page4.html
+++ b/public/page4.html
@@ -29,13 +29,13 @@
             <div class="col-md-12">
                 <header>
                     <nav class="navbar">
-                    <span>Tour With a Local</span>
+                    <span class="title">Tour With a Local</span>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="page4">How it works</a>
+                                <a class="nav-link active" href="page4">How it Works</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/page3">Sign Up</a>
@@ -49,24 +49,25 @@
                                         <a class="dropdown-item" href="/page6">Local</a>
                                     </div>
                             </li>
-                            <div id="google_translate_element"></div>
+                            <!-- <div id="google_translate_element"></div> -->
                         </ul>
                     </nav>
                 </header>
             </div>
         </div>
+        <br>
         <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <span>How Tour With a Local works</span><br><br>
-                <p>
-                    Tour With A Local connects tourists and locals. <br><br>
-                    A tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to spend for a local to take them to do and see those things.<br><br>
-                    Locals can then search through postings of tour requests made by tourists and reach out to the poster in helping them meet their travel plans.<br><br>
+                <h3>How Tour With a Local works</h3><br>
+                <p style="font-size: 18px;">
+                    Tour With A Local connects Tourists and Locals. <br><br>
+                    A Tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to spend for a Local to take them to do and see those things.<br><br>
+                    Locals can then search through postings of tour requests made by Tourists and reach out to a Tourist in helping them meet their travel plans.<br><br>
                     Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
-                    Locals benefit by making extra income giving tours in their spare time.<br><br>
-                    Both parties benefit by making a connection to someone they might not have ever met.<br><br>
-                    <button class="btn btn-primary" onclick="signup()">Sign up</button>
+                    Locals benefit by sharing their knowledge with others and making extra income giving tours in their spare time.<br><br>
+                    Both parties benefit by making a connection to someone they might not have ever met.<br>
+                    <!-- <button class="btn btn-primary" onclick="signup()">Sign up</button> -->
                 </p>
             </div>
         </div>
