--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,13 @@
             <div class="col-md-12">
                 <header>
                     <nav class="navbar">
-                    <span>Tour With a Local</span>
+                    <span class="title">Tour With a Local</span>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="page4">How it works</a>
+                                <a class="nav-link active" href="page4">How it Works</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/page3">Sign Up</a>
@@ -49,30 +49,29 @@
                                         <a class="dropdown-item" href="/page6">Local</a>
                                     </div>
                             </li>
-                            <div id="google_translate_element"></div>
+                            <!-- <div id="google_translate_element"></div> -->
                         </ul>
                     </nav>
                 </header>
                 </div>
             </div>
-    <div class="container">
-
-            
-
+    <div class="container-fluid">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
-                            <div id="buttonGroup" class="carousel-caption">
-                                    <div class="row justify-content-md-center">
-                                            <div class="col-md-3">
-                                                    <button class="btn btn-warning btn-lg" onclick="window.location.href='/page1'">Request a tour</button>
-                                                </div>
-                                                <div class="col-md-3"></div>
-                                                <div class="col-md-3">
-                                                    <button class="btn btn-success btn-lg" onclick="window.location.href='/page2'">Search tour requests</button>
-                                                    <br>
-                                                </div>
-                                                </div>
-                                            </div>
+                        <div id="buttonGroup" class="carousel-caption">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <button class="btn btn-warning btn-lg titleButton" onclick="window.location.href='/page1'">Post a Tour Request</button>
+                                </div>
+                                <div class="col-md-2"></div>
+                                
+                                <div class="col-md-3">
+                                    <button class="btn btn-success btn-lg titleButton" onclick="window.location.href='/page2'">Search Tour Requests</button>
+                                    <br>
+                                </div>
+                                <div class="col-md-3"></div>
+                            </div>
+                        </div>
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="./images/greece.jpg" alt="First slide">
                       </div>
@@ -83,14 +82,14 @@
                         <img class="d-block w-100" src="./images/london.jpg" alt="Third slide">
                       </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
-                    </a>
+                    </a> -->
                   </div>
     </div>
 </body>
