--- a/public/page1.html
+++ b/public/page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tour With A Local -- Tourist</title>
+    <title>Tour With A Local -- Post Tour Request</title>
 
     
 
@@ -29,13 +29,13 @@
                 <div class="col-md-12">
                     <header>
                     <nav class="navbar">
-                        <span>Tour With a Local</span>
+                        <span class="title">Tour With a Local</span>
                             <ul class="nav justify-content-end">
                                 <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="page4">How it works</a>
+                                    <a class="nav-link active" href="page4">How it Works</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/page3">Sign Up</a>
@@ -49,47 +49,43 @@
                                             <a class="dropdown-item" href="/page6">Local</a>
                                         </div>
                                 </li>
-                                <div id="google_translate_element"></div>
+                                <!-- <div id="google_translate_element"></div> -->
                             </ul>
                     </nav>
                     </header>
                 </div>
             </div>
+            <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Create a tour request</h3>
     <!-- <form onsubmit="store()"> -->
-    <form style="font-size: 20px;" action="/insert" method="POST">
-        What city would you like your tour to be in?<br>
-        <input style="font-size: 20px;" id="location" type="text" name="city" maxlength="99" required><br>
+    <form style="font-size: 18px;" onsubmit="tourReq()" action="/insert" method="POST">
+        In what city would you like your tour to be in?<br>
+        <input style="font-size: 18px;" id="location" type="text" name="city" maxlength="99" required><br>
         What state or country is the city in?<br>
-        <input style="font-size: 20px;" id="state" type="text" name="country" maxlength="99" required><br>
+        <input style="font-size: 18px;" id="state" type="text" name="country" maxlength="99" required><br>
         What do you want to see/do on your tour?<br>
-        <textarea style="font-size: 20px;" id="description" class="large-text-box" type="text" cols="40" rows="10" name="description" maxlength="499" required></textarea><br>
+        <textarea style="font-size: 18px;" id="description" class="large-text-box" type="text" cols="60" rows="10" name="description" maxlength="499" placeholder="Ex: Vist museums, each lunch at a local cafe, see street art." required></textarea><br>
         How many people are going to be on this tour?<br>
-        <input style="font-size: 20px;" id="people" type="number" name="people" min="1" max="999" required><br>
+        <input style="font-size: 18px;" id="people" type="number" name="people" min="1" max="999" required><br>
         What is your desired date for this tour?<br>
-        <input style="font-size: 20px;" id="date" type="date" name="date" required><br>
+        <input style="font-size: 18px;" id="date" type="date" name="date" required><br>
         Desired time? (hh:mm am/pm)<br>
-        <input style="font-size: 20px;" id="time" type="time" name="time" required><br>
+        <input style="font-size: 18px;" id="time" type="time" name="time" required><br>
         What is the best contact email?<span class="notice">&nbsp;( ! )</span>
-        <div style="font-size: 20px;" class="noticebox">This will be the email locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br>
-        <input style="font-size: 20px;" id="email" type="email" name="email" maxlength="99" required><br>
-        How much do you want to spend?<span class="notice">&nbsp;( ! )</span>
-        <div style="font-size: 20px;" class="noticebox">This is the amount you are offering to pay your tour guide and does not include extras like tickets, food, or entrance fees.</div><br>
-        <input style="font-size: 20px;" id="offer" type="number" name="budget" min="1" max="99999" required><br>
+        <div style="font-size: 18px;" class="noticebox">This will be the email locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br>
+        <input style="font-size: 18px;" id="email" type="email" name="email" maxlength="99" required><br>
+        How much do you want to offer your tour guide?<span class="notice">&nbsp;( ! )</span>
+        <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your tour guide and does not include extras like tickets, food, or entrance fees.</div><br>
+        <input style="font-size: 18px;" id="offer" type="number" name="budget" min="1" max="99999" required><br>
         <!-- <button type="button" onclick="store()">Submit</button> -->
-        <input
-        style="background-color: blue;
-        border: none;
-        color: white;
-        padding: 7px 14px;
-        margin: 20px 5px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 20px;" type="submit">
+        <input class="btn btn-primary" type="submit">
     </form>
-    <script>
-    
-    </script>
+            </div>
+        </div>
+    </div>
 </body>
 <hr>
 <footer>Daniel Button &copy; 2018</footer>
