--- a/public/page2.html
+++ b/public/page2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tour With A Local -- Local</title>
+    <title>Tour With A Local -- Search Tour Requests</title>
 
     
 
@@ -29,13 +29,13 @@
                 <div class="col-md-12">
                     <header>
                         <nav class="navbar">
-                        <span>Tour With a Local</span>
+                        <span class="title">Tour With a Local</span>
                             <ul class="nav justify-content-end">
                                 <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="page4">How it works</a>
+                                    <a class="nav-link active" href="page4">How it Works</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/page3">Sign Up</a>
@@ -49,7 +49,7 @@
                                             <a class="dropdown-item" href="/page6">Local</a>
                                         </div>
                                 </li>
-                                <div id="google_translate_element"></div>
+                                <!-- <div id="google_translate_element"></div> -->
                             </ul>
                         </nav>
                     </header>
