--- a/public/page2.html
+++ b/public/page2.html
@@ -29,13 +29,13 @@
                 <div class="col-md-12">
                     <header>
                         <nav class="navbar">
-                        <span class="title">Tour With a Local</span>
+                        <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
                             <ul class="nav justify-content-end">
                                 <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="page4">How it Works</a>
+                                    <a class="nav-link" href="page4">How it Works</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/page3">Sign Up</a>
@@ -46,7 +46,7 @@
                                     </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="/page5">Tourist</a>
-                                            <a class="dropdown-item" href="/page6">Local</a>
+                                            <a class="dropdown-item" href="/page6">Local Guide</a>
                                         </div>
                                 </li>
                                 <!-- <div id="google_translate_element"></div> -->
@@ -56,15 +56,15 @@
                 </div>
             </div>
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Tours to bid on</h2>
-            </div>
-        </div>
         <br>
         <div class="row">
             <div class="col-md-12">
-                <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search results.</h4>
+                <h2>Local Guides: Browse Available Tour Requests from Tourists</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h4>
             </div>
         </div>
         <br>
@@ -83,18 +83,10 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2>Contact the poster</h2>
-      <form style="font-size: 20px;" onsubmit="send()" id="email" method="post" enctype="text/plain">
+      <form style="font-size: 18px;" onsubmit="send()" id="email" method="post" enctype="text/plain">
       Your message to the poster:<br>
-      <textarea style="font-size: 20px;" id="sendM" cols="60" rows="10" maxlength="799" required></textarea><br>
-      <input
-      style="background-color: blue;
-        border: none;
-        color: white;
-        padding: 7px 14px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 20px;" type="submit" value="Send">
+      <textarea style="font-size: 18px;" id="sendM" cols="60" rows="7" maxlength="799" required></textarea><br>
+      <input class="btn btn-primary" type="submit" value="Send">
       </form>
     </div>
   
