--- a/public/page3.html
+++ b/public/page3.html
@@ -30,13 +30,13 @@
                 <div class="col-md-12">
                     <header>
                         <nav class="navbar">
-                            <span class="title">Tour With a Local</span>
+                            <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
                                 <ul class="nav justify-content-end">
                                     <li class="nav-item">
                                         <a class="nav-link" href="/">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="page4">How it Works</a>
+                                        <a class="nav-link" href="page4">How it Works</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="/page3">Sign Up</a>
@@ -47,7 +47,7 @@
                                         </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item" href="/page5">Tourist</a>
-                                                <a class="dropdown-item" href="/page6">Local</a>
+                                                <a class="dropdown-item" href="/page6">Local Guide</a>
                                             </div>
                                     </li>
                                     <!-- <div id="google_translate_element"></div> -->
@@ -72,8 +72,9 @@
         <input id="usrPass" style="font-size: 18px; width: 100%;" type="password" name="usrPass" maxlength="254" required><br>
         Account Type:<br>
         <input style="font-size: 18px;" type="radio" name="account" value="1" checked> Tourist&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input style="font-size: 18px;" type="radio" name="account" value="2"> Local<br><br>
-        <div class="loginButton"><input class="btn btn-primary" type="submit"></div>
+        <input style="font-size: 18px;" type="radio" name="account" value="2"> Local
+        <br><br>
+        <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit"></div>
     </form>
             </div>
             <div class="col-md-4"></div>
