--- a/public/page4.html
+++ b/public/page4.html
@@ -29,13 +29,13 @@
             <div class="col-md-12">
                 <header>
                     <nav class="navbar">
-                    <span class="title">Tour With a Local</span>
+                    <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="page4">How it Works</a>
+                                <a class="nav-link" href="page4">How it Works</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/page3">Sign Up</a>
@@ -46,7 +46,7 @@
                                 </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="/page5">Tourist</a>
-                                        <a class="dropdown-item" href="/page6">Local</a>
+                                        <a class="dropdown-item" href="/page6">Local GUide</a>
                                     </div>
                             </li>
                             <!-- <div id="google_translate_element"></div> -->
