--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,13 @@
             <div class="col-md-12">
                 <header>
                     <nav class="navbar">
-                    <span class="title">Tour With a Local</span>
+                    <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="page4">How it Works</a>
+                                <a class="nav-link" href="page4">How it Works</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/page3">Sign Up</a>
@@ -46,7 +46,7 @@
                                 </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="/page5">Tourist</a>
-                                        <a class="dropdown-item" href="/page6">Local</a>
+                                        <a class="dropdown-item" href="/page6">Local Guide</a>
                                     </div>
                             </li>
                             <!-- <div id="google_translate_element"></div> -->
@@ -56,32 +56,49 @@
                 </div>
             </div>
     <div class="container-fluid">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
+            <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                    </ol>
+                    <div class="carousel-inner"> -->
                         <div id="buttonGroup" class="carousel-caption">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <button class="btn btn-warning btn-lg titleButton" onclick="window.location.href='/page1'">Post a Tour Request</button>
+                                    <button class="btn btn-primary btn-lg titleButton" onclick="window.location.href='/page1'">Tourist:<br>Post a Tour Request</button>
                                 </div>
                                 <div class="col-md-2"></div>
                                 
                                 <div class="col-md-3">
-                                    <button class="btn btn-success btn-lg titleButton" onclick="window.location.href='/page2'">Search Tour Requests</button>
+                                    <button class="btn btn-success btn-lg titleButton" onclick="window.location.href='/page2'">Local Guide:<br>Search Tour Requests</button>
                                     <br>
                                 </div>
                                 <div class="col-md-3"></div>
                             </div>
                         </div>
-                      <div class="carousel-item active">
+                      <!-- <div class="carousel-item active">
+                        <img class="d-block w-100" src="./images/WashingtonDC.jpg" alt="First slide">
+                        </div>
+                      <div class="carousel-item">
                         <img class="d-block w-100" src="./images/greece.jpg" alt="First slide">
                       </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="./images/india.jpg" alt="First slide">
+                        </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="./images/italy.jpg" alt="Second slide">
                       </div>
                       <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/france.jpg" alt="First slide">
+                          </div>
+                      <div class="carousel-item">
                         <img class="d-block w-100" src="./images/london.jpg" alt="Third slide">
                       </div>
-                    </div>
+                    </div> -->
                     <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
@@ -93,9 +110,6 @@
                   </div>
     </div>
 </body>
-<div class="footer">
-    <br>
-    <hr>
-    <footer>Daniel Button &copy; 2018</footer>
-</div>
+    <!-- <hr> -->
+    <footer class="footer"><hr>Daniel Button &copy; 2018</footer>
 </html>
