--- a/public/page6.html
+++ b/public/page6.html
@@ -29,13 +29,13 @@
             <div class="col-md-12">
                 <header>
                     <nav class="navbar">
-                    <span class="title">Tour With a Local</span>
+                    <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="page4">How it Works</a>
+                                <a class="nav-link" href="page4">How it Works</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/page3">Sign Up</a>
@@ -46,7 +46,7 @@
                                 </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="/page5">Tourist</a>
-                                        <a class="dropdown-item" href="/page6">Local</a>
+                                        <a class="dropdown-item" href="/page6">Local Guide</a>
                                     </div>
                             </li>
                             <!-- <div id="google_translate_element"></div> -->
@@ -60,17 +60,18 @@
         <div class="row">
             <div class="col-md-4"></div>
             <div class="col-md-4">
-                <h3 class="loginTitle">Log in as a Local.</h3>
+                <h3 class="loginTitle">Log in as a Local Guide.</h3>
                 <form style="font-size: 18px;" action="/page2" method="get">
-                    Username:<br><input style="font-size: 18px; width: 100%;" type="text" required><br>
-                    Password:<br><input style="font-size: 18px; width: 100%;" type="password" required><br>
-                    <div class="loginButton"><input class="btn btn-primary" type="submit"></div>
+                    Username:<br>
+                    <input style="font-size: 18px; width: 100%;" type="text" required><br>
+                    Password:<br>
+                    <input style="font-size: 18px; width: 100%;" type="password" required><br><br>
+                    <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit"></div>
                 </form>
             </div>
             <div class="col-md-4"></div>
         </div>
     </div>
 </body>
-<hr>
-<footer>Daniel Button &copy; 2018</footer>
+<footer class="footer"><hr>Daniel Button &copy; 2018</footer>
 </html>
