changed pictures used

--- a/public/page1.html
+++ b/public/page1.html
@@ -77,19 +77,18 @@
         What is the best contact email?<span class="notice">&nbsp;( ! )</span>
         <div style="font-size: 18px;" class="noticebox">This will be the email locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br>
         <input style="font-size: 18px;" id="email" type="email" name="email" maxlength="99" required><br>
-        How much do you want to offer your tour guide?<span class="notice">&nbsp;( ! )</span>
-        <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your tour guide in local currency and does not include extras like tickets, food, or entrance fees.</div><br>
+        How much do you want to offer your Local Guide?<span class="notice">&nbsp;( ! )</span>
+        <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your Local Guide in their local currency and does not include extras like tickets, food, or entrance fees.</div><br>
         <input style="font-size: 18px;" id="offer" type="number" name="budget" min="1" max="99999" required><br>
         <!-- <button type="button" onclick="store()">Submit</button> -->
         <input class="btn btn-primary" type="submit">
     </form>
             </div>
             <div class="col-md-7">
-                <!-- <img class="rounded" src="./images/tourist1.jpg" alt="Tourist"> -->
+                <img id="touristImg" class="rounded" src="./images/tourist1.jpg" alt="Tourist">
             </div>
         </div>
     </div>
 </body>
-<hr>
-<footer>Daniel Button &copy; 2018</footer>
+<footer><hr>Daniel Button &copy; 2018</footer>
 </html>
