--- a/public/page3.html
+++ b/public/page3.html
@@ -81,6 +81,6 @@
         </div>
     </div>
 </body>
-<br><hr>
-<footer>Daniel Button &copy; 2018</footer>
+<br>
+<footer><hr>Daniel Button &copy; 2018</footer>
 </html>
