--- a/public/page4.html
+++ b/public/page4.html
@@ -73,6 +73,5 @@
         </div>
     </div>
 </body>
-<hr>
-<footer>Daniel Button &copy; 2018</footer>
+<footer><hr>Daniel Button &copy; 2018</footer>
 </html>
