--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
     <div class="container-fluid">
-            <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -64,8 +64,9 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                     </ol>
-                    <div class="carousel-inner"> -->
+                    <div class="carousel-inner">
                         <div id="buttonGroup" class="carousel-caption">
                             <div class="row">
                                 <div class="col-md-4">
@@ -80,14 +81,17 @@
                                 <div class="col-md-3"></div>
                             </div>
                         </div>
-                      <!-- <div class="carousel-item active">
-                        <img class="d-block w-100" src="./images/WashingtonDC.jpg" alt="First slide">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="./images/china.jpg" alt="First slide">
                         </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="./images/india.jpg" alt="First slide">
+                      </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="./images/greece.jpg" alt="First slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/india.jpg" alt="First slide">
+                        <img class="d-block w-100" src="./images/usa.jpg" alt="First slide">
                         </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="./images/italy.jpg" alt="Second slide">
@@ -98,7 +102,7 @@
                       <div class="carousel-item">
                         <img class="d-block w-100" src="./images/london.jpg" alt="Third slide">
                       </div>
-                    </div> -->
+                    </div>
                     <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
@@ -110,6 +114,5 @@
                   </div>
     </div>
 </body>
-    <!-- <hr> -->
-    <footer class="footer"><hr>Daniel Button &copy; 2018</footer>
+    <footer><hr>Daniel Button &copy; 2018</footer>
 </html>
