--- a/public/page2.html
+++ b/public/page2.html
@@ -85,7 +85,7 @@
       <h2>Contact the poster</h2>
       <form style="font-size: 18px;" onsubmit="send()" id="email" method="post" enctype="text/plain">
       Your message to the poster:<br>
-      <textarea style="font-size: 18px;" id="sendM" cols="60" rows="7" maxlength="799" required></textarea><br>
+      <textarea style="font-size: 18px; width: 100%;" id="sendM" cols="60" rows="7" maxlength="799" required></textarea><br>
       <input class="btn btn-primary" type="submit" value="Send">
       </form>
     </div>
@@ -93,6 +93,5 @@
   </div>
 
 </body>
-<hr>
-<footer>Daniel Button &copy; 2018</footer>
+<footer><hr>Daniel Button &copy; 2018</footer>
 </html>
