duplicate account checking with redirects added

--- a/public/page8.html
+++ b/public/page8.html
@@ -59,6 +59,13 @@
             <br>
     <div class="container">
         <div class="row">
+            <div class="col-md-12">
+                    <div class="alert alert-danger" role="alert">
+                            User Name or Email already taken.  Please try again.
+                          </div>    
+            </div>
+        </div>
+        <div class="row">
                 <div class="col-md-4"></div>
             <div class="col-md-4">
                 <h3 class="loginTitle">Create an Account</h3>
