--- a/public/page5.html
+++ b/public/page5.html
@@ -63,7 +63,7 @@
             <div class="col-md-4">
                 <h3 class="loginTitle">Log in as a Tourist.</h3>
                 <br>
-                <form style="font-size: 18px;" onsubmit="touristLog()" action="/page9" method="get">
+                <form style="font-size: 18px;" onsubmit="touristLog()">
                     Username:<br>
                     <input id="tUsrName" style="font-size: 18px; width: 100%;" type="text" required><br>
                     Password:<br>
@@ -75,5 +75,6 @@
         </div>
     </div>
 </body>
+<br><br>
 <footer class="footer"><hr>Daniel Button &copy; 2018</footer>
 </html>
