--- a/public/page12.html
+++ b/public/page12.html
@@ -58,6 +58,13 @@
         </div>
         <br>
         <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="alert alert-danger" role="alert">
+                        Wrong Password.  Please try again.
+                    </div>    
+                </div>
+            </div>
         <div class="row">
             <div class="col-md-4"></div>
             <div class="col-md-4">
