--- a/public/page4.html
+++ b/public/page4.html
@@ -61,12 +61,12 @@
             <div class="col-md-12">
                 <h3>How Tour With a Local works</h3><br>
                 <p style="font-size: 18px;">
-                    Tour With A Local connects Tourists and Locals. <br><br>
-                    A Tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to spend for a Local to take them to do and see those things.<br><br>
-                    Locals can then search through postings of tour requests made by Tourists and reach out to a Tourist in helping them meet their travel plans.<br><br>
+                    Tour With A Local connects Tourists and Locals with tours anywhere in the world. <br><br>
+                    A Tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to pay for a Local to take them to do and see those things.<br><br>
+                    Locals wanting to give tours can search through postings of tour requests made by Tourists and reach out to a Tourist to help them to fullfill their travel plans.<br><br>
                     Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
                     Locals benefit by sharing their knowledge with others and making extra income giving tours in their spare time.<br><br>
-                    Both parties benefit by making a connection to someone they might not have ever met.<br>
+                    Both parties benefit by making a connection to someone they might not otherwise have a chance to meet.<br>
                     <!-- <button class="btn btn-primary" onclick="signup()">Sign up</button> -->
                 </p>
             </div>
