fixed contact and delete button issue

--- a/public/page1.html
+++ b/public/page1.html
@@ -75,7 +75,7 @@
         Desired time? (hh:mm am/pm)<br>
         <input style="font-size: 18px;" id="time" type="time" name="time" required><br>
         What is the best contact email?<span class="notice">&nbsp;( i )</span>
-        <div style="font-size: 18px;" class="noticebox">This will be the email locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br>
+        <div style="font-size: 18px;" class="noticebox">This will be the email Locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br>
         <input style="font-size: 18px;" id="email" type="email" name="email" maxlength="99" required><br>
         How much do you want to offer your Local Guide?<span class="notice">&nbsp;( i )</span>
         <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your Local Guide in their local currency and does not include extras like tickets, food, or entrance fees.</div><br>
