--- a/public/page2.html
+++ b/public/page2.html
@@ -83,7 +83,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2>Contact the poster</h2>
-      <form style="font-size: 18px;" onsubmit="send()" id="email" method="post" enctype="text/plain">
+      <form style="font-size: 18px;" onsubmit="send()" action="#" method="GET" id="sendEmail" enctype="text/plain">
       Your message to the poster:<br>
       <textarea style="font-size: 18px; width: 100%;" id="sendM" cols="60" rows="7" maxlength="799" required></textarea><br>
       <input class="btn btn-primary" type="submit" value="Send">
