test site, commented out console logs, added email, site ready to go live

--- a/public/page4.html
+++ b/public/page4.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 
@@ -61,7 +61,7 @@
             <div class="col-md-12">
                 <h3>How Tour With a Local works</h3><br>
                 <p style="font-size: 18px;">
-                    Tour With A Local connects Tourists and Locals with tours anywhere in the world. <br><br>
+                    Tour With A Local connects Tourists and Locals through custom tours anywhere in the world. <br><br>
                     A Tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to pay for a Local to take them to do and see those things.<br><br>
                     Locals wanting to give tours can search through postings of tour requests made by Tourists and reach out to a Tourist to help them to fullfill their travel plans.<br><br>
                     Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
@@ -73,5 +73,5 @@
         </div>
     </div>
 </body>
-<footer><hr>Daniel Button &copy; 2018</footer>
+<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
