--- a/public/page10.html
+++ b/public/page10.html
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
+    <script src="./localAccount.js"></script>
 
 </head>
 <body onload="getData()">
@@ -40,14 +41,8 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/page3">Sign Up</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Log In
-                                    </a>
-                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="/page5">Tourist</a>
-                                            <a class="dropdown-item" href="/page6">Local Guide</a>
-                                        </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" onclick="logOut()" href="#">Log Out</a>
                                 </li>
                                 <!-- <div id="google_translate_element"></div> -->
                             </ul>
@@ -93,5 +88,5 @@
   </div>
 
 </body>
-<footer><hr>Daniel Button &copy; 2018</footer>
+<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
