removed index pictures and made logo clickable

--- a/public/page4.html
+++ b/public/page4.html
@@ -29,7 +29,7 @@
             <div class="col-md-12">
                 <header>
                     <nav class="navbar">
-                    <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
+                    <span class="title"><a href="/"><img src="./images/logo.png" height="70px" alt="logo"></a>&trade;</span>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
@@ -60,13 +60,19 @@
         <div class="row">
             <div class="col-md-12">
                 <h3>How Tour With a Local works</h3><br>
-                <p style="font-size: 18px;">
-                    Tour With A Local connects Tourists and Locals through custom tours anywhere in the world. <br><br>
-                    A Tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to pay for a Local to take them to do and see those things.<br><br>
-                    Locals wanting to give tours can search through postings of tour requests made by Tourists and reach out to a Tourist to help them to fullfill their travel plans.<br><br>
-                    Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
-                    Locals benefit by sharing their knowledge with others and making extra income giving tours in their spare time.<br><br>
-                    Both parties benefit by making a connection to someone they might not otherwise have a chance to meet.<br>
+                <p style="font-size: 20px;">
+                    Tour With a Local connects Tourists and Locals through custom tours anywhere in the world. <br><br>
+                    <b>Users:</b><br><br>
+                    1) A Tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to pay for a Local to take them to do and see those things.<br><br>
+                    2) Locals wanting to give tours can search through postings of tour requests made by Tourists and reach out to a Tourist to help them fullfill their travel plans.<br><br>
+                    <b>Benefits:</b><br><br>
+                    1) Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
+                    2) Locals benefit by sharing their knowledge with others and making extra income giving tours in their spare time.<br><br>
+                    3) Both parties benefit by making a connection to someone they might not otherwise have a chance to meet.<br><br>
+                    <b>Safety:</b><br><br>
+                    1) Meet at and only travel to public places.<br><br>
+                    2) Walk, bike, use public transport, Uber/Lyft, or take a taxi to go between destinations.<br><br>
+                    3) Carry little cash.  Use an ATM if you need to get more.<br>
                     <!-- <button class="btn btn-primary" onclick="signup()">Sign up</button> -->
                 </p>
             </div>
