--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             <div class="col-md-12">
                 <header>
                     <nav class="navbar">
-                    <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
+                    <span class="title"><a href="/"><img src="./images/logo.png" height="70px" alt="logo"></a>&trade;</span>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
@@ -56,7 +56,33 @@
                 </div>
             </div>
     <div class="container-fluid">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <br><br><br>
+            <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <h2 id="clickHere">Click <a href="/page4">here</a> to see how <b>Tour With a Local</b> works.</h2>
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+                <br><br><br>
+            <div id="buttonGroup">
+                    <div class="row">
+                            <div class="col-md-2"></div>
+                        <div class="col-md-4">
+                            <button class="btn btn-primary btn-lg titleButton" onclick="window.location.href='/page1'">Tourist:<br>Post a Tour Request</button>
+                        </div>
+                        <!-- <div class="col-md-1"></div> -->
+                        
+                        <div class="col-md-4">
+                            <button class="btn btn-success btn-lg titleButton" onclick="window.location.href='/page2'">Local Guide:<br>Search Tour Requests</button>
+                            <br>
+                        </div>
+                        <div class="col-md-2"></div>
+                    </div>
+                </div>
+                <br><br><br>
+                
+            <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -102,7 +128,7 @@
                       <div class="carousel-item">
                         <img class="d-block w-100" src="./images/london.jpg" alt="Third slide">
                       </div>
-                    </div>
+                    </div> -->
                     <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
@@ -111,7 +137,7 @@
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a> -->
-                  </div>
+                  <!-- </div> -->
     </div>
 </body>
     <footer><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
