--- a/public/page1.html
+++ b/public/page1.html
@@ -29,7 +29,7 @@
                 <div class="col-md-12">
                     <header>
                     <nav class="navbar">
-                        <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
+                        <span class="title"><a href="/"><img src="./images/logo.png" height="70px" alt="logo"></a>&trade;</span>
                             <ul class="nav justify-content-end">
                                 <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
