--- a/public/page2.html
+++ b/public/page2.html
@@ -29,7 +29,7 @@
                 <div class="col-md-12">
                     <header>
                         <nav class="navbar">
-                        <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
+                        <span class="title"><a href="/"><img src="./images/logo.png" height="70px" alt="logo"></a>&trade;</span>
                             <ul class="nav justify-content-end">
                                 <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
@@ -59,12 +59,13 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <h2>Local Guides: Browse Available Tour Requests from Tourists</h2>
+                <h2>Local Guides: Browse Available Tour Requests from Tourists Below</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h4>
+                <h5>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h5>
+                <h5>You will need an active email client on your computer to contact a Tourist.</h5>
             </div>
         </div>
         <br>
