redesigned index and tour request.  created test.html

--- a/public/page3.html
+++ b/public/page3.html
@@ -74,7 +74,7 @@
         <input style="font-size: 18px;" type="radio" name="account" value="1" checked> Tourist&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input style="font-size: 18px;" type="radio" name="account" value="2"> Local
         <br><br>
-        <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit"></div>
+        <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit" value="Sign Up"></div>
     </form>
             </div>
             <div class="col-md-4"></div>
@@ -82,5 +82,5 @@
     </div>
 </body>
 <br>
-<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
