--- a/public/page5.html
+++ b/public/page5.html
@@ -68,7 +68,7 @@
                     <input id="tUsrName" style="font-size: 18px; width: 100%;" type="text" required><br>
                     Password:<br>
                     <input id="tUsrPass" style="font-size: 18px; width: 100%;" type="password" required><br><br>
-                    <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit"></div>
+                    <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit" value="Log In"></div>
                 </form>
             </div>
             <div class="col-md-4"></div>
@@ -76,5 +76,5 @@
     </div>
 </body>
 <br><br>
-<footer class="footer"><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
+<footer class="footer"><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
