--- a/public/page1.html
+++ b/public/page1.html
@@ -59,27 +59,33 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <h3>Tourists: Create a Tour Request</h3>
+                <h3>Create a Custom Tour Request</h3>
+                <br>
     <!-- <form onsubmit="store()"> -->
     <form style="font-size: 18px;" onsubmit="tourReq()" action="/insert" method="POST">
+        <b>Location Details:</b><br>
         In what city would you like your tour to be in?<br>
         <input style="font-size: 18px;" id="location" type="text" name="city" maxlength="99" required><br>
         What state or country is the city in?<br>
-        <input style="font-size: 18px;" id="state" type="text" name="country" maxlength="99" required><br>
+        <input style="font-size: 18px;" id="state" type="text" name="country" maxlength="99" required><br><br>
+        <b>Tour Details:</b><br>
         What do you want to see/do on your tour?<br>
         <textarea style="font-size: 18px;" id="description" class="large-text-box" type="text" cols="32" rows="10" name="description" maxlength="499" placeholder="Ex: Vist museums, eat lunch at a local cafe, see street art." required></textarea><br>
         How many people are going to be on this tour?<br>
         <input style="font-size: 18px;" id="people" type="number" name="people" min="1" max="999" required><br>
         What is your desired date for this tour?<br>
         <input style="font-size: 18px;" id="date" type="date" name="date" required><br>
-        Desired time? (hh:mm am/pm)<br>
-        <input style="font-size: 18px;" id="time" type="time" name="time" required><br>
-        What is the best contact email?<span class="notice">&nbsp;( i )</span>
-        <div style="font-size: 18px;" class="noticebox">This will be the email Locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br>
+        Desired time? <span class="helperText">(hh:mm am/pm)</span><br>
+        <input style="font-size: 18px;" id="time" type="time" name="time" required><br><br>
+        <b>Posting Details:</b><br>
+        What is the best contact email?<br>
+        <!-- <span class="notice">&nbsp;( i )</span>
+        <div style="font-size: 18px;" class="noticebox">This will be the email Locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br> -->
         <input style="font-size: 18px;" id="email" type="email" name="email" maxlength="99" required><br>
-        How much do you want to offer your Local Guide?<span class="notice">&nbsp;( i )</span>
-        <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your Local Guide in their local currency and does not include extras like tickets, food, or entrance fees.</div><br>
-        <input style="font-size: 18px;" id="offer" type="number" name="budget" min="1" max="99999" required><br>
+        How much do you want to offer your Local Guide?<br>
+        <!-- <span class="notice">&nbsp;( i )</span>
+        <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your Local Guide in their local currency and does not include extras like tickets, food, or entrance fees.</div><br> -->
+        <input style="font-size: 18px;" id="offer" type="number" name="budget" min="1" max="99999" required><br><br>
         <!-- <button type="button" onclick="store()">Submit</button> -->
         <input class="btn btn-primary" type="submit">
     </form>
@@ -90,5 +96,5 @@
         </div>
     </div>
 </body>
-<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
