--- a/public/page8.html
+++ b/public/page8.html
@@ -89,5 +89,5 @@
     </div>
 </body>
 <br>
-<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
