--- a/public/test.html
+++ b/public/test.html
@@ -24,7 +24,7 @@
     <script src="./script.js"></script>
 
 </head>
-<body onload="getData()">
+<body>
         <div class="row">
                 <div class="col-md-12">
                     <header>
@@ -59,20 +59,45 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <h2>Local Guides: Browse Available Tour Requests from Tourists Below</h2>
+                <h2>Browse All Available Tour Requests from Tourists Below</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <h5>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h5>
-                <h5>You will need an active email client on your computer to contact a Tourist.</h5>
+                <h6>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h6>
+                <h6>You will need an active email client on your computer to contact a Tourist.</h6>
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-md-12">
                 <div id="listings">
-
+                    <div class="card">
+                        <h5 class="card-header"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
+                        <div class="card-body">
+                        <div class="card-text">
+                        <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date: <span class="helperText">(YYYY/MM/DD)</span></b> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer: <span class="helperText">(in local currency)</span></b> ${arr[i].budget}.00</p>
+                        </div>
+                        <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-primary">Contact the Poster</button>
+                        </div>
+                        </div>
+                        <br>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div id="listings">
+                    <div class="card">
+                        <h5 class="card-header"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
+                        <div class="card-body">
+                        <div class="card-text">
+                        <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date: <span class="helperText">(YYYY/MM/DD)</span></b> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer: <span class="helperText">(in local currency)</span></b> ${arr[i].budget}.00</p>
+                        </div>
+                        <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-primary">Contact</button>
+                        </div>
+                        </div>
+                        <br>
                 </div>
             </div>
         </div>
@@ -96,5 +121,5 @@
   </div>
 
 </body>
-<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
